--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "01_calculator",
+  "name": "practice",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -7,7 +7,9 @@
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
     "axios": "^0.21.0",
+    "cors": "^2.8.5",
     "eslint": "^6.6.0",
+    "express": "^4.17.1",
     "gh-pages": "^3.1.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
@@ -48,6 +50,5 @@
     "eslint-plugin-react": "7.20.0",
     "eslint-plugin-react-hooks": "4.0.0",
     "prettier": "^2.1.2"
-  },
-  "homepage": "http://DDDieon.github.io/react-study"
+  }
 }
