--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "express": "^4.17.1",
     "gh-pages": "^3.1.0",
     "react": "^16.13.1",
+    "react-calendar": "^3.2.0",
     "react-dom": "^16.13.1",
     "react-icons": "^3.11.0",
     "react-redux": "^7.2.1",
